# guile-blackcat

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  blackcat.scm  bootstrap  configure.ac  guile.am  pre-inst-env.in
blackcat/: config.scm  config.scm.in  inotify.scm  shepherd-utils.scm  shepherd.scm  utils.scm  watch.scm
blackcat/scripts/: autoload.scm  hello.scm  reload.scm  service-watcher.scm
blackcat/shepherd/: defaults.scm  services.scm  utils.scm
blackcat/shepherd/services/: core.scm  desktop.scm  network.scm  session.scm  system.scm
docs-src/: usage-reload.kdl
testsuite/blackcat.test/: config.exp  inotify.exp  shepherd-defaults.exp  shepherd-utils.exp  utils.exp  watch.exp
testsuite/lib/: blackcat.exp
